# org-repos-manifest-sbom-collector

./: README.md
.github/workflows/: manifest_collector.yml
manifests/: metadata.json
manifests/go-dvwa-gh/: go.mod
manifests/java-WebGoat-gh/: socket-gradle.cdx.json
manifests/java-hw-gradlelockfile-gh/: build.gradle  gradle.lockfile
manifests/kotlin-threats-hw-maven-gh/: pom.xml  socket-gradle.cdx.json
manifests/rust-threats-hw-gh/: Cargo.toml
