[package]

name = "rust-hello-world"
version = "0.0.1"
authors = ["Cody P Schafer <dev@codyps.com>"]

[dependencies]
# From crates.io (latest compatible)
serde = "1.0"
protobuf = "=3.7.1"
time = "=0.2.22" 


# --- Other way to add dependency ---
# Pin exact version (avoid auto-upgrades)
# serde_json = "=1.0.117"

# With features
# tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# From Git
# mycrate = { git = "https://github.com/org/mycrate", rev = "4d3adf0" }

# Local path
# local_utils = { path = "../local_utils" }